added demo gui